- Add setup.py (experimental)  - Add README.md (incomplete), LICENSE  - Add MANIFEST.in  - Change requirements.txt to pull list from setup.py  - Add __init__.py to all modules  - Add PORT AND DEBUG constants to config  - Refactor the loc starting the server into a function that  can be imported into a module and run from there, in case  the server is not being started from the package itself  - Generate takeout-help.html from README.md using a  Markdown to HTML converter; adjust CSS accordingly so the urls  in that section are still of a certain color and not underlined  - Add potential products of using setup.py to .gitignore;  remove the lines covering the files that are no longer present  in the project

--- a/youtubewatched/static/main.css
+++ b/youtubewatched/static/main.css
@@ -60,7 +60,7 @@ hr {
 
 /*Specific styles*/
 
-.project-dir-path, form, #new-project-submit-button, #progress-bar-rectangle, #takeout-help {
+.project-dir-path, form, #new-project-submit-button, #progress-bar-rectangle {
     margin: 10px 0;
 }
 .project-path {
@@ -118,7 +118,7 @@ hr {
     margin: 5% auto 1.5% auto;
 }
 
-.link-btn, .link-btn:visited {
+a, a:visited {
     color: dodgerblue;
     text-decoration: none;
 }
